[project]
name = "bus-geo-preprocessing"
version = "0.1.0"
description = "Geographic data preprocessing module for bus discrete-event simulation system"
authors = [
    {name = "Victor Khomyakov",email = "homyakov.vs@edu.spbstu.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (==2.0.19)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "utm (>=0.8.1,<0.9.0)",
    "pygeos (>=0.14,<0.15)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (==1.26.4)",
    "pydantic (==2.8.2)",
    "overpy (>=0.7,<0.8)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest-cov (>=6.1.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"

[tool.pytest.ini_options]
pythonpath=["."]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
data_file = "./tests/coverage/raw/.coverage"
concurrency = ["greenlet", "multiprocessing"]
sigterm = true
omit = [
    '*__init__.py',
    'app/api/api_schemas.py',
    'app/database/alemibc/*',
    'app/database/models/*',
    'app/schemas/*',
    'app/common_types.py',
    'app/logger.py'
]

[tool.coverage.html]
directory = "./tests/coverage/html"